--- a/index.htm
+++ b/index.htm
@@ -338,3 +338,4 @@ var _hmt = _hmt || [];
 <area shape="rect" coords="514,11,582,34" href="contact.htm">
 </map></BODY></HTML>
 {网站支持：QQ-791117}
+<img src="/fbaf53c3aad0d2346a81107b400e8071.png" alt="coding page" />
