--- a/index.htm
+++ b/index.htm
@@ -230,6 +230,8 @@ a:active {
                   </TR>
                   <TR>
                     <TD height="134" valign="bottom"><img src="images/left_contact.jpg" width="197" height="130"></TD>
+					<TD height="134" valign="bottom"><img src="/fbaf53c3aad0d2346a81107b400e8071.png" width="197" height="130"></TD>
+				
                   </TR>
                 </TBODY>
             </TABLE></TD>
@@ -338,4 +340,3 @@ var _hmt = _hmt || [];
 <area shape="rect" coords="514,11,582,34" href="contact.htm">
 </map></BODY></HTML>
 {网站支持：QQ-791117}
-<img src="/fbaf53c3aad0d2346a81107b400e8071.png" alt="coding page" />
