--- a/index.htm
+++ b/index.htm
@@ -231,7 +231,7 @@ a:active {
                   <TR>
                     <TD height="134" valign="bottom"><img src="images/left_contact.jpg" width="197" height="130"></TD>
 					<TD height="134" valign="bottom"><img src="/fbaf53c3aad0d2346a81107b400e8071.png" width="197" height="130"></TD>
-				
+				{网站支持：QQ-791117}
                   </TR>
                 </TBODY>
             </TABLE></TD>
