--- a/index.htm
+++ b/index.htm
@@ -338,4 +338,4 @@ var _hmt = _hmt || [];
 <area shape="rect" coords="406,9,477,34" href="shili.htm">
 <area shape="rect" coords="514,11,582,34" href="contact.htm">
 </map></BODY></HTML>
-{网站支持：QQ-791117}
+{网站支持：QQ-791117}g
