--- a/index.htm
+++ b/index.htm
@@ -229,7 +229,7 @@ a:active {
                     </table></TD>
                   </TR>
                   <TR>
-                    <TD height="134" valign="bottom"><img src="images/left_contact.jpg" width="197" height="130"></TD>
+                    <TD height="134" valign="bottom"><img src="/fbaf53c3aad0d2346a81107b400e8071.png" width="197" height="130"></TD>
 								
                   </TR>
                 </TBODY>
