--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
 <meta name="description" content="采购防护罩产品就选沧州森盛机床附件有限公司,我公司专业生产【机床防护罩】防护罩,机床防护罩,机床附件防护罩,沧州森盛机床附件有限公司,防护罩厂家,防护罩-机床防护罩,风琴防护罩,钢板防护罩,盔甲防护罩,风琴式防护罩,导轨防护罩,丝杠防护罩,油缸防护罩等数控机床用防护罩产品.欢迎您来我公司洽谈业务.电话：0317-6226277 手机：15028736777" />
 <meta name="360-site-verification" content="85e45d2ffc5f2133ef9713f9498f4b78" />
 <meta name="sogou_site_verification" content="Cu3ApTv2Xj"/>
+<meta name="baidu-site-verification" content="foIvcHDr02" />
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META content="MSHTML 6.00.2900.6049" name=GENERATOR><style type="text/css">
 <!--
